--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="container">
             <div class="slider-wrapper" tabindex="0">
 
-                <div class="item">
-                    <img src="img/01.webp" alt="Spiderman" />
+                <div class="item" :v-for>
+                    <img :src="slides[activeIndex].image" alt="Spiderman"/>
                     <div class="text">
                         <h3>Spiderman</h3>
                         <p>
@@ -30,12 +30,12 @@
                 </div>
 
                 <div class="thumbs">
-                    <div class="prev"></div>
-                    <div class="next"></div>
-                    <div class="thumb active">
-                        <img src="img/01.webp" alt="Svezia" />
+                    <div class="prev" @click="avSlide()"></div>
+                    <div class="next" @click="doSlide()"></div>
+                    <div class="thumb active" v-for="(slide, index) in slides">
+                        <img :src="slide.image" alt="Svezia" />
                     </div>
-                    <div class="thumb">
+                    <!-- <div class="thumb">
                         <img src="img/02.webp" alt="Ratchet & Clank" />
                     </div>
                     <div class="thumb">
@@ -46,7 +46,7 @@
                     </div>
                     <div class="thumb">
                         <img src="img/05.webp" alt="Avengers" />
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
