--- a/index.html
+++ b/index.html
@@ -17,14 +17,11 @@
             <div class="slider-wrapper" tabindex="0">
 
                 <div class="item" :v-for>
-                    <img :src="slides[activeIndex].image" alt="Spiderman"/>
+                    <img :src="slides[activeIndex].image" :alt="slides[activeIndex].title">
                     <div class="text">
-                        <h3>Spiderman</h3>
+                        <h3>{{slides[activeIndex].title}}</h3>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit
-                            tempore aliquid deleniti aut
-                            veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum
-                            corporis.
+                            {{slides[activeIndex].text}}
                         </p>
                     </div>
                 </div>
@@ -32,8 +29,8 @@
                 <div class="thumbs">
                     <div class="prev" @click="avSlide()"></div>
                     <div class="next" @click="doSlide()"></div>
-                    <div class="thumb active" v-for="(slide, index) in slides">
-                        <img :src="slide.image" alt="Svezia" />
+                    <div class="thumb active" @click="selectSlide(index)" :class="{'active': index === activeIndex}" v-for="(slide, index) in slides" :key="index">
+                        <img :src="slide.image" :alt="slide.title" >
                     </div>
                     <!-- <div class="thumb">
                         <img src="img/02.webp" alt="Ratchet & Clank" />
